force-app/main/default/objects/Payment__c/fields/Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Value__c</fullName>
    <label>Currency Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>