force-app/main/default/objects/Payment__c/fields/Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value__c</fullName>
    <label>Customer Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>