force-app/main/default/objects/Payment__c/fields/Process_Payment__c.field-meta.xml
<CustomField>
    <fullName>Process_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Payment</label>
    <type>Checkbox</type>
</CustomField>