force-app/main/default/objects/Payment__c/fields/QB_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_ID__c</fullName>
    <externalId>true</externalId>
    <label>QB Payment ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>