force-app/main/default/objects/Payment__c/fields/Unapplied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_Amount__c</fullName>
    <label>Unapplied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>